--- a/stackedbar/stacked-bar-full.html
+++ b/stackedbar/stacked-bar-full.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <h3 style="padding-left:30px;">New York City Police Department New Hire's Enthicity</h3>
+    <h3 style="padding-left:30px;">New York City Police Department New Hire's Ethicity</h3>
     <h4 style="padding-left:30px;">2015</h4>
     <script src="lib/d3.js"></script>
     <script src="lib/jquery.js"></script>
@@ -85,7 +85,7 @@
             .attr("y", 6)
             .attr("dy", ".71em")
             .style("text-anchor", "end")
-            .text("Enthicity Percentage");
+            .text("Ethicity Percentage");
 
         var selection = svg.selectAll(".series")
             .data(data)
