--- a/stackedbar/stacked-bar-full.html
+++ b/stackedbar/stacked-bar-full.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <h3 style="padding-left:30px;">New York City Police Department New Hire ethnicity</h3>
+    <h3 style="padding-left:30px;">New York City Police Department New Hire Ethnicity</h3>
     <h4 style="padding-left:30px;">2015</h4>
     <script src="lib/d3.js"></script>
     <script src="lib/jquery.js"></script>
@@ -52,7 +52,7 @@
 
       d3.csv("data/nypddemographics.csv", function (error, data) {
 
-        var labelVar = 'ethnicity';
+        var labelVar = 'Ethnicity';
         var varNames = d3.keys(data[0]).filter(function (key) { return key !== labelVar;});
         color.domain(varNames);
 
@@ -69,7 +69,7 @@
           d.total = d.mapping[d.mapping.length - 1].y1;
         });
 
-        x.domain(data.map(function (d) { return d.ethnicity; }));
+        x.domain(data.map(function (d) { return d.Ethnicity; }));
         y.domain([0, d3.max(data, function (d) { return d.total; })]);
 
         svg.append("g")
@@ -91,7 +91,7 @@
             .data(data)
           .enter().append("g")
             .attr("class", "series")
-            .attr("transform", function (d) { return "translate(" + x(d.ethnicity) + ",0)"; });
+            .attr("transform", function (d) { return "translate(" + x(d.Ethnicity) + ",0)"; });
 
         selection.selectAll("rect")
           .data(function (d) { return d.mapping; })
@@ -138,7 +138,7 @@
             trigger: 'manual',
             html : true,
             content: function() {
-              return "ethnicity: " + d.label +
+              return "Ethnicity: " + d.label +
                      "<br/>Percent: " + d3.format(",")(d.value ? d.value: d.y1 - d.y0); }
           });
           $(this).popover('show')
