--- a/stackedbar2/stacked-bar-full.html
+++ b/stackedbar2/stacked-bar-full.html
@@ -85,7 +85,7 @@
             .attr("y", 6)
             .attr("dy", ".71em")
             .style("text-anchor", "end")
-            .text("Ethicity Percentage");
+            .text("Gender Percentage");
 
         var selection = svg.selectAll(".series")
             .data(data)
