--- a/icicle/index.html
+++ b/icicle/index.html
@@ -1,58 +1,118 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<title>Partition - Icicle</title>
-<style>
 
+<!DOCTYPE html>
+<!--ICICLE-->
+<meta charset="utf-8">
+<style>
+body {
+  font: 9px sans-serif;
+  color: #121401;
+}
 .node {
   fill: #ddd;
   stroke: #fff;
 }
 
 .label {
-  font: 10px sans-serif;
+  font: 9px sans-serif;
+  color: #121401;
   text-anchor: middle;
 }
 
 </style>
 <body>
-<script src="//d3js.org/d3.v3.min.js"></script>
-<script>
+<p>
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<script>// <![CDATA[
+var width = 1800,
+    height = 900;
 
-var width = 960,
-    height = 500;
 
-var color = d3.scale.category20();
+var x = d3.scale.linear()
+    .range([0, width]);
 
-var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
+var y = d3.scale.linear()
+    .range([0, height]);
+
+var color = d3.scale.category20c();
+
+
+
+
+var margin = {top: 40, right: 40, bottom: 40, left: 40},
+    w = 0.5 * 2000 - margin.left - margin.right,
+    h = 0.25 * 1200- margin.top - margin.bottom,
+    x_range = d3.scale.linear().range([0, w]),
+    y_range = d3.scale.linear().range([0, h]),
+    color = d3.scale.category20c();
+
+var vis = d3.select("body").append("svg")
+    .attr("width", w)
+    .attr("height", h)
+    .style("left", margin.left + "px")
+    .style("top", margin.top + "px");
 
 var partition = d3.layout.partition()
-    .size([width, height])
-    .value(function(d) { return d.size; });
+    .value(function(d) { return d.size; }
 
-d3.json("flare.json", function(error, root) {
-  if (error) throw error;
+);
 
-  var nodes = partition.nodes(root);
 
-  svg.selectAll(".node")
-      .data(nodes)
-    .enter().append("rect")
-      .attr("class", "node")
-      .attr("x", function(d) { return d.x; })
-      .attr("y", function(d) { return d.y; })
-      .attr("width", function(d) { return d.dx; })
-      .attr("height", function(d) { return d.dy; })
-      .style("fill", function(d) { return color((d.children ? d : d.parent).name); });
+d3.json("flare.json", function(json) {
+    var data = partition(json);
+    var rect = vis.selectAll("rect").data(data).enter()
+     .append("svg:rect")
+     .attr("x", function(d) { return x_range(d.x); })
+     .attr("y", function(d) { return y_range(d.y); })
+     .attr("width", function(d) { return x_range(d.dx); })
+     .attr("height", function(d) { return y_range(d.dy); })
+    .attr("fill", function(d) {return color(d.name);})
+     .style("cursor", "pointer")
 
-  svg.selectAll(".label")
-      .data(nodes.filter(function(d) { return d.dx > 6; }))
-    .enter().append("text")
-      .attr("class", "label")
-      .attr("dy", ".35em")
-      .attr("transform", function(d) { return "translate(" + (d.x + d.dx / 2) + "," + (d.y + d.dy / 2) + ")rotate(90)"; })
-      .text(function(d) { return d.name; });
+
+
+     .on("click", click);
+
+
+
+
+    var fo = vis.selectAll("foreignObject").data(data).enter()
+     .append("svg:foreignObject")
+     .attr("x", function(d) { return x_range(d.x); })
+     .attr("y", function(d) { return y_range(d.y); })
+     .attr("width", function(d) { return x_range(d.dx); })
+     .attr("height", function(d) { return y_range(d.dy); })
+     .style("cursor", "pointer")
+
+
+
+
+
+    .text(function(d) { return d.name })
+
+     .on("click", click);
+
+    function click(d) {
+        x_range.domain([d.x, d.x + d.dx]);
+        y_range.domain([d.y, 1]).range([d.y ? 20 : 0, h]);
+
+        rect.transition()
+            .duration(750)
+            .attr("x", function(d) { return x_range(d.x); })
+            .attr("y", function(d) { return y_range(d.y); })
+            .attr("width", function(d) { return x_range(d.x + d.dx) - x_range(d.x); })
+            .attr("height", function(d) { return y_range(d.y + d.dy) - y_range(d.y); });
+
+        fo.transition()
+            .duration(750)
+            .attr("x", function(d) { return x_range(d.x); })
+            .attr("y", function(d) { return y_range(d.y); })
+            .attr("width", function(d) { return x_range(d.x + d.dx) - x_range(d.x); })
+            .attr("height", function(d) { return y_range(d.y + d.dy) - y_range(d.y); });
+
+
+   }
+
+
 });
-
-</script>
+// ]]></script>
+</p>
