--- a/linechart2/index.html
+++ b/linechart2/index.html
@@ -47,7 +47,7 @@ var parseDate = d3.time.format("%d-%b-%y").parse,
     bisectDate = d3.bisector(function(d) { return d.date; }).left,
     formatValue = d3.format(","),
     formatCurrency = function(d) { return formatValue(d); };
-	
+
 var x = d3.time.scale()
 	//.nice(d3.time.year)
     .range([0, width]);
@@ -70,11 +70,17 @@ var line = d3.svg.line()
     .y(function(d) { return y(d.close); });
 
 var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
+.attr("width", '100%')
+    .attr("height", '100%')
+    .attr('viewBox','0 0 '+Math.min(width,height)+' '+Math.min(width,height))
+    .attr('preserveAspectRatio','xMinYMin')
+    .append("g")
+    .attr("transform", "translate(" + Math.min(width,height) / 2 + "," + Math.min(width,height) / 2 + ")");
+/*    .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
+*/
 d3.tsv("data.tsv", function(error, data) {
   if (error) throw error;
 
