--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -29,6 +29,7 @@
           width  = 700 - margin.left - margin.right,
           height = 400  - margin.top  - margin.bottom;
 
+
       var x = d3.scale.ordinal()
           .rangeRoundBands([0, width], .1);
 
@@ -55,6 +56,14 @@
 
       var color = d3.scale.ordinal()
           .range(["#101b4d","#ff4500","#475003","#9c8305","#d3c47c"]);
+
+      var svg = d3.select('.chart-container').append("svg")
+          .attr("width", '100%')
+          .attr("height", '100%')
+          .attr('viewBox','0 0 '+Math.min(width,height)+' '+Math.min(width,height))
+          .attr('preserveAspectRatio','xMinYMin')
+          .append("g")
+          .attr("transform", "translate(" + Math.min(width,height) / 2 + "," + Math.min(width,height) / 2 + ")");
 
       var svg = d3.select("body").append("svg")
           .attr("width",  width  + margin.left + margin.right)
