--- a/area/stacked-area-full.html
+++ b/area/stacked-area-full.html
@@ -112,7 +112,7 @@
             .attr("y", 6)
             .attr("dy", ".71em")
             .style("text-anchor", "end")
-            .text("Number of Rounds");
+            .text("Number of Violent Incidents");
 
         var selection = svg.selectAll(".series")
           .data(seriesArr)
