--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -24,10 +24,16 @@
     <script src="lib/jquery.js"></script>
     <script src="lib/bootstrap.js"></script>
     <script>
-      var margin = {top: 20, right: 55, bottom: 30, left: 75},
+
+    var margin = {top: 20, right: 20, bottom: 30, left: 60},
+    ww = document.getElementById("chart").clientWidth,
+    width = ww - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
+
+      /* var margin = {top: 20, right: 55, bottom: 30, left: 75},
           width  = 600 - margin.left - margin.right,
           height = 300  - margin.top  - margin.bottom;
-
+*/
 
       var x = d3.scale.ordinal()
           .rangeRoundBands([0, width], .1);
@@ -63,6 +69,14 @@
           .attr('preserveAspectRatio','xMinYMin')
           .append("g")
           .attr("transform", "translate(" + Math.min(width,height) / 2 + "," + Math.min(width,height) / 2 + ")");
+
+//RESPONSIVE
+          var svg = d3.select("#chart").append("svg")
+              .attr("width", width + margin.left + margin.right)
+              .attr("height", height + margin.top + margin.bottom)
+              .append("g")
+              .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+//END - RESPONSIVE
 
       var svg = d3.select("body").append("svg")
           .attr("width",  width  + margin.left + margin.right)
