--- a/linechart4/multi-line-full.html
+++ b/linechart4/multi-line-full.html
@@ -151,6 +151,8 @@
            .on("mouseover", function (d) { showPopover.call(this, d); })
            .on("mouseout",  function (d) { removePopovers(); })
 
+
+
 // lEGEND Start
         var legend = svg.selectAll(".legend")
             .data(varNames.slice().reverse())
@@ -192,6 +194,39 @@
           });
           $(this).popover('show')
         }
+
+// Define responsive behavior
+    function resize() {
+      var width = parseInt(d3.select("#chart").style("width")) - margin.left - margin.right,
+      height = parseInt(d3.select("#chart").style("height")) - margin.top - margin.bottom;
+
+      // Update the range of the scale with new width/height
+      xScale.range([0, width]);
+      yScale.range([height, 0]);
+
+      // Update the axis and text with the new scale
+      svg.select('.x.axis')
+        .attr("transform", "translate(0," + height + ")")
+        .call(xAxis);
+
+      svg.select('.y.axis')
+        .call(yAxis);
+
+      // Force D3 to recalculate and update the line
+      svg.selectAll('.line')
+        .attr("d", function(d) { return line(d.datapoints); });
+
+      // Update the tick marks
+      xAxis.ticks(Math.max(width/75, 2));
+      yAxis.ticks(Math.max(height/50, 2));
+
+    };
+
+    // Call the resize function whenever a resize event occurs
+    d3.select(window).on('resize', resize);
+
+    // Call the resize function
+    resize();
       });
     </script>
   </body>
