--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Chart.js demo</title>
         <!-- import plugin script -->
-        <script src='Chart.min.js'></script>
+        <script src='Chart.js-master/dist/Chart.js'></script>
     </head>
     <body>
         <!-- line chart canvas element -->
