--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8" />
         <title>Chart.js demo</title>
         <!-- import plugin script -->
-        <script src='Chart.js-master/dist/Chart.js'></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+
     </head>
     <body>
         <!-- line chart canvas element -->
