--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Chart.js demo</title>
         <!-- import plugin script -->
-        <script src="Chart.js/dist/Chart.js"></script>
+        <script src="Chart.js"></script>
 
     </head>
     <body>
