--- a/test/index.html
+++ b/test/index.html
@@ -18,18 +18,18 @@
 //sum of values = 360
       var data = [
           {
-            value=270,
+            value: 270,
             color:"cornflowerblue",
             highlight:"lightskyblue",
             lablel:"Corn Flower Blue"
           },
         {
-            value= 50,
+            value: 50,
             color:"lightgreen",
             highlight:"yellowgreen",
             lablel:"Light Green"
         },
-      {  value=40,
+      { value: 40,
         color:"orange",
         highlight:"darkorange",
         lablel:"Orange"
