--- a/test/index.html
+++ b/test/index.html
@@ -8,33 +8,30 @@
 
     </head>
     <body>
-<canvas id="mycanvas" width="400" height="400"></canvas>
 
+
+<canvas id="myChart" width="400" height="400"></canvas>
 <script>
-var chrt = document.getElementById("mycanvas").getContext("2d");
-
-var data = {
-    labels: ["January", "February", "March", "April", "May", "June", "July"], //x-axis
-    datasets: [
-        {
-            label: "My First dataset", //optional
-            fillColor: "rgba(220,220,220,0.8)",
-            strokeColor: "rgba(220,220,220,0.8)",
-            highlightFill: "rgba(220,220,220,0.75)",
-            highlightStroke: "rgba(220,220,220,1)",
-            data: [65, 59, 80, 81, 56, 55, 40] // y-axis
-        },
-		{
-            label: "My Second dataset", //optional
-            fillColor: "rgba(220,120,220,0.8)",
-            strokeColor: "rgba(220,120,220,0.8)",
-            highlightFill: "rgba(220,220,220,0.75)",
-            highlightStroke: "rgba(220,220,220,1)",
-            data: myarr
+var ctx = document.getElementById("myChart");
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+        datasets: [{
+            label: '# of Votes',
+            data: [12, 19, 3, 5, 2, 3]
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
         }
-    ]
-};
-var myFirstChart = new Chart(chrt).Bar(data);
+    }
+});
 </script>
     </body>
 </html>
