--- a/pie/index.html
+++ b/pie/index.html
@@ -16,10 +16,10 @@ var ctx = document.getElementById("myChart");
 var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
-        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+        labels: ["Consumption Of Alcohol On Streets","Litter Liquids Noxious: Pour Discharge","Unlawful Possession Of Marijuana","Oper M/V In Viol Safety Rules","Disorderly Conduct Pl 240.20 01 0v","Unlawfully In Parks/After Hours","Trespass","Sign, Park; Fail To Comply With","Violate/Fail To Comply With Fire Commissioner","Disorderly Conduct","Reckless Driving","Operating Mv With Suspended Registration","Motor Vehicle Engine On/Key In Over 3 Minutes","Littering Prohibited","Offensive Matter In Street/Public Place","Operate W/Suspended/Revoked License","General Prohibitions - Unreasonable Noise","Disorderly Conduct Pl 240.20 06 0v","Disorderly Conduct Pl 240.20 07 0v","Disorderly Conduct Pl 240.20 02 0v"],
         datasets: [{
             label: '# of Votes',
-            data: [12, 19, 3, 5, 2, 3]
+            data: [96,389,19,456,16,541,16,189,10,574,10,393,7,450,7,069,6,732,6,654,5,948,4,162,3,919,3,464,2,977,2,678,2,642,2,572,2,538,2,507]
         }]
     },
     options: {
