--- a/pie/index.html
+++ b/pie/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Chart.js Bar chart</title>
+        <title>Top 10 Summons Types</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -16,10 +16,10 @@ var ctx = document.getElementById("myChart");
 var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
-        labels: ["Consumption Of Alcohol On Streets","Litter Liquids Noxious: Pour Discharge","Unlawful Possession Of Marijuana","Oper M/V In Viol Safety Rules","Disorderly Conduct Pl 240.20 01 0v","Unlawfully In Parks/After Hours","Trespass","Sign Park Fail To Comply With","Violate/Fail To Comply With Fire Commissioner","Disorderly Conduct","Reckless Driving","Operating Mv With Suspended Registration","Motor Vehicle Engine On/Key In Over 3 Minutes","Littering Prohibited","Offensive Matter In Street/Public Place","Operate W/Suspended/Revoked License","General Prohibitions - Unreasonable Noise","Disorderly Conduct Pl 240.20 06 0v","Disorderly Conduct Pl 240.20 07 0v","Disorderly Conduct Pl 240.20 02 0v"],
+        labels: ["Consumption Of Alcohol On Streets","Litter Liquids Noxious: Pour Discharge","Unlawful Possession Of Marijuana","Oper M/V In Viol Safety Rules","Disorderly Conduct Pl 240.20 01 0v","Unlawfully In Parks/After Hours","Trespass","Sign Park Fail To Comply With","Violate/Fail To Comply With Fire Commissioner","Disorderly Conduct Disorderly Conduct PL 240.20 01 0V"],
         datasets: [{
-            label: '# of Votes',
-            data: [96389,19456,16541,16189,10574,10393,7450,7069,6732,6654,5948,4162,3919,3464,2977,2678,2642,2572,2538,2507]
+            label: '# Summonses 2015',
+            data: [96389,19456,16541,16189,10574,10393,7450,7069,6732,6654]
         }]
     },
     options: {
