--- a/pie/index.html
+++ b/pie/index.html
@@ -18,7 +18,7 @@ ctx.canvas.height = 300;
 var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
-        labels: ["Consumption Of Alcohol On Streets","Litter Liquids Noxious: Pour Discharge","Unlawful Possession Of Marijuana","Oper M/V In Viol Safety Rules","Disorderly Conduct Pl 240.20 01 0v","Unlawfully In Parks/After Hours","Trespass","Sign Park Fail To Comply With","Violate/Fail To Comply With Fire Commissioner","Disorderly Conduct Disorderly Conduct PL 240.20 01 0V"],
+        labels: ["Consumption Of Alcohol On Streets","Public Urination","Unlawful Possession Of Marijuana","Oper M/V In Viol Safety Rules","Disorderly Conduct Pl 240.20 01 0v","Unlawfully In Parks/After Hours","Trespass","Sign Park Fail To Comply With","Violate/Fail To Comply With Fire Commissioner","Disorderly Conduct Disorderly Conduct PL 240.20 01 0V"],
         datasets: [{
             label: '# Summonses 2015',
             data: [96389,19456,16541,16189,10574,10393,7450,7069,6732,6654]
