--- a/pie/index.html
+++ b/pie/index.html
@@ -10,8 +10,12 @@
     <body>
 
 
-<canvas id="myChart" width="400" height="400"></canvas>
+<canvas id="myChart" width="400" max-height="400"></canvas>
 <script>
+
+Chart.defaults.global.responsive = true
+Chart.defaults.global.maintainAspectRatio = true
+
 var ctx = document.getElementById("myChart");
 
 var myChart = new Chart(ctx, {
@@ -20,8 +24,14 @@ var myChart = new Chart(ctx, {
         labels: ["Consumption Of Alcohol On Streets","Public Urination","Unlawful Possession Of Marijuana","Oper M/V In Viol Safety Rules","Disorderly Conduct Pl 240.20 01 0v","Unlawfully In Parks/After Hours","Trespass","Sign Park Fail To Comply With","Violate/Fail To Comply With Fire Commissioner","Disorderly Conduct Disorderly Conduct PL 240.20 01 0V"],
         datasets: [{
             label: '# Summonses 2015',
+            backgroundColor: "rgba(255,99,132,0.2)",
+            borderColor: "rgba(255,99,132,1)",
+            borderWidth: 1,
+            hoverBackgroundColor: "rgba(255,99,132,0.4)",
+            hoverBorderColor: "rgba(255,99,132,1)",
             data: [96389,19456,16541,16189,10574,10393,7450,7069,6732,6654]
         }]
+
     },
     options: {
         scales: {
@@ -32,6 +42,7 @@ var myChart = new Chart(ctx, {
             }]
         }
     }
+
 });
 </script>
     </body>
