--- a/pie/index.html
+++ b/pie/index.html
@@ -24,11 +24,11 @@ var myChart = new Chart(ctx, {
         labels: ["Open Container of Alcohol","Public Urination","Marijuana Possession","For Hire Vehicle Safety","Disorderly Conduct - Obstructing Traffic","In Park After Hours","Trespassing","Disobey Park Signs","Violating Fire Safety Standards","Disorderly Conduct - Fighting"],
         datasets: [{
             label: '# Summonses 2015',
-            backgroundColor: "rgba(255,99,132,0.2)",
-            borderColor: "rgba(255,99,132,1)",
+            backgroundColor:["#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a"],
+            borderColor: "#eeeeee",
             borderWidth: 1,
-            hoverBackgroundColor: "rgba(255,99,132,0.4)",
-            hoverBorderColor: "rgba(255,99,132,1)",
+            hoverBackgroundColor: "#9E9E9E",
+            hoverBorderColor: "#eeeeee",
             data: [96389,19456,16541,16189,10574,10393,7450,7069,6732,6654]
         }]
 
