--- a/pie/index.html
+++ b/pie/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Top 10 Summons Types</title>
+        <title>Result of Summons</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -19,17 +19,17 @@ Chart.defaults.global.responsive = true
 var ctx = document.getElementById("myChart");
 
 var myChart = new Chart(ctx, {
-    type: 'bar',
+    type: 'doughnut',
     data: {
-        labels: ["Open Container of Alcohol","Public Urination","Marijuana Possession","For Hire Vehicle Safety","Disorderly Conduct - Obstructing Traffic","In Park After Hours","Trespassing","Disobey Park Signs","Violating Fire Safety Standards","Disorderly Conduct - Fighting"],
+        labels: ["Dismissed","Guilty","Open Warrant"],
         datasets: [{
-            label: '# Summonses 2015',
+            label: 'Results of Summons',
             backgroundColor:["#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [96389,19456,16541,16189,10574,10393,7450,7069,6732,6654]
+            data: [65,21,14]
         }]
 
     },
