--- a/pie/index.html
+++ b/pie/index.html
@@ -24,7 +24,7 @@ var myChart = new Chart(ctx, {
         labels: ["Dismissed","Guilty","Open Warrant"],
         datasets: [{
             label: 'Results of Summons',
-            backgroundColor:["#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a"],
+            backgroundColor:["#5e5f61", "#0f0352", "#c8350a"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
