--- a/linechart6/index.html
+++ b/linechart6/index.html
@@ -10,12 +10,12 @@
     <body>
 
 
-<canvas id="myChart" width=auto max-height="400"></canvas>
+<canvas id="myChart" width="711" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.tooltips.backgroundColor="grey"
-//Chart.defaults.global.maintainAspectRatio = true
+Chart.defaults.global.maintainAspectRatio = true
 
 var ctx = document.getElementById("myChart");
 
