--- a/linechart6/index.html
+++ b/linechart6/index.html
@@ -5,7 +5,11 @@
         <title>Top 10 Summons Types</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
-
+        <style>
+        body{
+          margin:0;
+        }
+        </style>
     </head>
     <body>
 
