--- a/linechart6/index.html
+++ b/linechart6/index.html
@@ -7,7 +7,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
         <style>
         body{
-          margin:0;
+          margin-top: 0;
+          margin-bottom: 0;
         }
         </style>
     </head>
