--- a/linechart6/index.html
+++ b/linechart6/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Top 10 Summons Types</title>
+        <title>Violent Incidents in NYC Correction Facilities</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
         <style>
