color hover point pink

--- a/linechart7/index.html
+++ b/linechart7/index.html
@@ -72,7 +72,7 @@ var myChart = new Chart(ctx, {
           pointHoverBorderWidth: 2,
           pointRadius: 3,
           pointHitRadius: 10,
-          hoverBackgroundColor: "#9E9E9E",
+          hoverBackgroundColor: "pink",
           hoverBorderColor: "#eeeeee",
           data: [1382,1298,1373,1456,1561,1446,1325]
 
