new point color pink

--- a/linechart7/index.html
+++ b/linechart7/index.html
@@ -67,12 +67,12 @@ var myChart = new Chart(ctx, {
           pointBackgroundColor: "#ff4500",
           pointBorderWidth: 5,
           pointHoverRadius: 10,
-          pointHoverBackgroundColor: "rgba(75,192,192,1)",
+          pointHoverBackgroundColor: "pink",
           pointHoverBorderColor: "rgba(220,220,220,1)",
           pointHoverBorderWidth: 2,
           pointRadius: 3,
           pointHitRadius: 10,
-          hoverBackgroundColor: "pink",
+          hoverBackgroundColor: "#9E9E9E",
           hoverBorderColor: "#eeeeee",
           data: [1382,1298,1373,1456,1561,1446,1325]
 
