--- a/linechart7/index.html
+++ b/linechart7/index.html
@@ -85,7 +85,7 @@ var myChart = new Chart(ctx, {
         scales: {
             yAxes: [{
                 ticks: {
-                    beginAtZero:false
+                    beginAtZero:true
                 }
             }]
         }
