--- a/stackedbar3/index.html
+++ b/stackedbar3/index.html
@@ -34,7 +34,7 @@ var myChart = new Chart(ctx, {
             backgroundColor:"#434a9f",
             borderColor: "#eeeeee",
             borderWidth: 1,
-            hoverBackgroundColor: "#101b4d",
+            hoverBackgroundColor: "#C5CAE9",
             hoverBorderColor: "#eeeeee",
             data: [78.8,47.5]
         },
@@ -43,7 +43,7 @@ var myChart = new Chart(ctx, {
           backgroundColor: "#ffcc5d",
           borderColor: "#eeeeee",
           borderWidth: 1,
-          hoverBackgroundColor: "#9E9E9E",
+          hoverBackgroundColor: "#F1F8E9",
           hoverBorderColor: "#eeeeee",
           data: [21.5,52.5]
       }
