--- a/stackedbar4/index.html
+++ b/stackedbar4/index.html
@@ -43,7 +43,7 @@ var myChart = new Chart(ctx, {
           backgroundColor: "#ffcc5d",
           borderColor: "#eeeeee",
           borderWidth: 1,
-          hoverBackgroundColor: "#eeeeee",
+          hoverBackgroundColor: "#FFF9C4",
           hoverBorderColor: "#eeeeee",
           data: [17,22.8]
       },
@@ -52,7 +52,7 @@ var myChart = new Chart(ctx, {
         backgroundColor:"#f1f6e2",
         borderColor: "#eeeeee",
         borderWidth: 1,
-        hoverBackgroundColor: "#eeeeee",
+        hoverBackgroundColor: "#F1F8E9",
         hoverBorderColor: "#eeeeee",
         data: [26,28.6]
     },
@@ -61,7 +61,7 @@ var myChart = new Chart(ctx, {
       backgroundColor:"#809898",
       borderColor: "#eeeeee",
       borderWidth: 1,
-      hoverBackgroundColor: "#eeeeee",
+      hoverBackgroundColor: "#CFD8DC",
       hoverBorderColor: "#eeeeee",
       data: [10.9,12.6]
   },
@@ -70,7 +70,7 @@ var myChart = new Chart(ctx, {
     backgroundColor:"#9fcae7",
     borderColor: "#eeeeee",
     borderWidth: 1,
-    hoverBackgroundColor: "#eeeeee",
+    hoverBackgroundColor: "#E1F5FE",
     hoverBorderColor: "#eeeeee",
     data: [.1,2.7]
 }
