--- a/stackedbar4/index.html
+++ b/stackedbar4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Gender of New NYPD Hires 2015</title>
+        <title>Ethicity of New NYPD Hires 2015</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
         <style>
@@ -15,7 +15,7 @@
     <body>
 
 
-<canvas id="myChart" width="1600" height="850"></canvas>
+<canvas id="myChart" width="1600" height="1000"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
