--- a/bar2/index.html
+++ b/bar2/index.html
@@ -15,7 +15,7 @@
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.tooltips.backgroundColor="pink"
-//Chart.defaults.global.maintainAspectRatio = true
+Chart.defaults.global.maintainAspectRatio = true
 
 var ctx = document.getElementById("myChart");
 
