--- a/bar2/index.html
+++ b/bar2/index.html
@@ -24,7 +24,7 @@ var myChart = new Chart(ctx, {
     data: {
         labels: ["Open Container of Alcohol","Public Urination","Marijuana Possession","For Hire Vehicle Safety","Disorderly Conduct - Obstructing Traffic","In Park After Hours","Trespassing","Disobey Park Signs","Violating Fire Safety Standards","Disorderly Conduct - Fighting"],
         datasets: [{
-            label: '# Summonses 2015',
+            label: 'Top 10 Summons Types 2015',
             backgroundColor:["#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a"],
             borderColor: "#eeeeee",
             borderWidth: 1,
