--- a/bar2/index.html
+++ b/bar2/index.html
@@ -22,7 +22,7 @@ var ctx = document.getElementById("myChart");
 var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
-        labels: ["Open Container of Alcohol","Public Urination","Marijuana Possession","For Hire Vehicle Safety","Obstructing Traffic","In Park After Hours","Trespassing","Disobey Park Signs","Violating Fire Safety Standards","Fighting"],
+        labels: ["Open Container of Alcohol","Public Urination","In Park After Hours","Disobey Park Signs"],
         datasets: [{
             label: 'Top 10 Summons Types 2015',
             backgroundColor:["#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a"],
@@ -30,7 +30,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [96389,19456,16541,16189,10574,10393,7450,7069,6732,6654]
+            data: [96389,19456,10393,7069]
         }]
 
     },
