--- a/bar2/index.html
+++ b/bar2/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="myChart" width="1600" height="850"></canvas>
+<canvas id="top-10-summons-types" width=auto max-height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
