--- a/bar2/index.html
+++ b/bar2/index.html
@@ -17,7 +17,7 @@ Chart.defaults.global.responsive = true
 
 Chart.defaults.global.maintainAspectRatio = true
 
-var ctx = document.getElementById("myChart");
+var ctx = document.getElementById("top-10-summons-types");
 
 var myChart = new Chart(ctx, {
     type: 'bar',
