--- a/bar2/index.html
+++ b/bar2/index.html
@@ -22,7 +22,7 @@ var ctx = document.getElementById("top-10-summons-types");
 var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
-        labels: ["Open Container of Alcohol","Public Urination","In Park After Hours","Disobey Park Signs"],
+        labels: ["Open Container","Public Urination","In Park After Hours","Disobey Park Signs"],
         datasets: [{
             label: 'Top NYC Criminal Summons Types 2015',
             backgroundColor:["#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a"],
