--- a/doughnut/index.html
+++ b/doughnut/index.html
@@ -29,7 +29,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [65,21,14]
+            data: [65%,21%,14%]
         }]
 
     }
