--- a/linechart7/index.html
+++ b/linechart7/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="linechart7" width=auto height="400"></canvas>
+<canvas id="linechart7" width=auto max-height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
