--- a/stackedbar4/index.html
+++ b/stackedbar4/index.html
@@ -5,24 +5,19 @@
         <title>Ethicity of New NYPD Hires 2015</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
-        <style>
-        body{
-          margin-top: 0;
-          margin-bottom: 0;
-        }
-        </style>
+
     </head>
     <body>
 
 
-<canvas id="myChart" width="1600" height="850"></canvas>
+<canvas id="stackedbar4" width=auto max-height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.tooltips.backgroundColor="grey"
 Chart.defaults.global.maintainAspectRatio = true
 
-var ctx = document.getElementById("myChart");
+var ctx = document.getElementById("stackedbar4");
 
 var myChart = new Chart(ctx, {
     type: 'bar',
