--- a/bar3/index.html
+++ b/bar3/index.html
@@ -25,7 +25,7 @@ var myChart = new Chart(ctx, {
         labels: ["District 26  Jimmy Van Bramer","District 08  Melissa Mark-Viverito","District 38  Carlos Menchaca","District 19, Paul Vallone","District 27  I. Daneek Miller", "District 39  Brad Lander", "District 33  Stephen Levin","District 36  Robert Cornegy","District 23  Barry Grodenchik","District 44  David Greenfield","District 34  Antonio Reynoso","District 22  Costa Constantinides","District 31  Donovan Richards","District 40  Matthieu Eugene", "District 35  Laurie Cumbo","District 10  Ydanis Rodriguez", "District 11  Andy Cohen", "District 47  Mark Treyger",  "District 03  Corey Johnson", "District 29  Karen Koslowitz", "District 07  Mark Levine", "District 21  Julissa Ferreras-Copeland","District 30  Elizabeth Crowley","District 15  Ritchie Torres","District 32  Eric Ulrich", "District 06  Helen Rosenthal", "District 05  Ben Kallos", "District 45  Jumaane Williams"],
         datasets: [{
             label: 'Participatory Budgeting Spending Per District 2016',
-            backgroundColor:["#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a", "#0f0352", "#c8350a"],
+            backgroundColor:["#F44336", "#E91E63", "#9C27B0", "#673AB7", "#3F51B5", "#2196F3", "#03A9F4", "#00BCD4", "#0f0352", "#009688","#4CAF50","#8BC34A","#CDDC39","#FFEB3B", "#FFC107","#FF9800","#FF5722","#795548","#607D8B"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
