--- a/bar3/index.html
+++ b/bar3/index.html
@@ -14,7 +14,7 @@
 <script>
 
 Chart.defaults.global.responsive = true
-
+Chart.defaults.global.legend.display= false
 Chart.defaults.global.maintainAspectRatio = true
 
 var ctx = document.getElementById("bar3");
