--- a/bar3/index.html
+++ b/bar3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Participatory Budgeting Spending Per District 2016/title>
+        <title>Participatory Budgeting Spending Per District 2016</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
