font bigger agai

--- a/bar3/index.html
+++ b/bar3/index.html
@@ -16,7 +16,7 @@
 Chart.defaults.global.responsive = true
 Chart.defaults.global.legend.display= false
 Chart.defaults.global.maintainAspectRatio = true
-Chart.defaults.global.defaultFontSize = 10
+// Chart.defaults.global.defaultFontSize = 10
 
 var ctx = document.getElementById("bar3");
 
