--- a/bar3/index.html
+++ b/bar3/index.html
@@ -36,6 +36,8 @@ var myChart = new Chart(ctx, {
 
     },
     options: {
+      categoryPercentage: 1,
+      barPercentage: 1,
         scales: {
             yAxes: [{
                 ticks: {
