adding label text

--- a/bar2/index.html
+++ b/bar2/index.html
@@ -14,8 +14,8 @@
 <script>
 
 Chart.defaults.global.responsive = true
-
 Chart.defaults.global.maintainAspectRatio = true
+Chart.defaults.global.tooltips.callbacks.beforeLabel= "test"
 
 var ctx = document.getElementById("top-10-summons-types");
 
