--- a/doughnut/index.html
+++ b/doughnut/index.html
@@ -14,6 +14,7 @@
 <script>
 
 Chart.defaults.global.responsive = true
+Chart.defaults.global.tooltips.callbacks.afterLabel= "test"
 //Chart.defaults.global.maintainAspectRatio = true
 
 var ctx = document.getElementById("myChart");
