--- a/doughnut/index.html
+++ b/doughnut/index.html
@@ -14,7 +14,7 @@
 <script>
 
 Chart.defaults.global.responsive = true
-Chart.defaults.global.tooltips.xLabel= "test"
+Chart.defaults.global.tooltips.backgroundColor= "pink"
 //Chart.defaults.global.maintainAspectRatio = true
 
 var ctx = document.getElementById("myChart");
