--- a/doughnut/index.html
+++ b/doughnut/index.html
@@ -14,7 +14,8 @@
 <script>
 
 Chart.defaults.global.responsive = true
-Chart.defaults.global.tooltips.xLabel= "pink"
+Chart.defaults.global.tooltipTemplate: "<%if (label){%><%=label%>: <%}%><%= value %>"
+Chart.defaults.global.multiTooltipTemplate: "<%= value %>"
 //Chart.defaults.global.maintainAspectRatio = true
 
 var ctx = document.getElementById("myChart");
