--- a/doughnut/index.html
+++ b/doughnut/index.html
@@ -14,7 +14,7 @@
 <script>
 
 Chart.defaults.global.responsive = true
-Chart.defaults.global.multiTooltipTemplate: "<%= value %>"
+Chart.defaults.global.tooltips.return="test"
 //Chart.defaults.global.maintainAspectRatio = true
 
 var ctx = document.getElementById("myChart");
