--- a/doughnut/index.html
+++ b/doughnut/index.html
@@ -14,7 +14,7 @@
 <script>
 
 Chart.defaults.global.responsive = true
-Chart.defaults.global.tooltips.callbacks.title=function(tooltipItems, data) {"test"}
+Chart.defaults.global.tooltips.callbacks.title = "My random string: <%= value %>"
 //Chart.defaults.global.maintainAspectRatio = true
 
 var ctx = document.getElementById("doughnut");
