--- a/doughnut2/index.html
+++ b/doughnut2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Result of Summons</title>
+        <title>Participatory Budget Funded Project Types</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
