--- a/doughnut2/index.html
+++ b/doughnut2/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="doughnut2" width=auto max-height="400"></canvas>
+<canvas id="doughnut2" width=auto height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
