--- a/doughnut2/index.html
+++ b/doughnut2/index.html
@@ -24,7 +24,7 @@ var myChart = new Chart(ctx, {
         labels: ["Education","Parks & Recreation","Open Arts, Culture & Community","Transit","Housing","Public Safety","Seniors"],
         datasets: [{
             label: 'Type of Projects Funded 2016',
-            backgroundColor:["#3F51B5", "#2196F3", "#03A9F4", "#00BCD4", "#009688","#4CAF50","#8BC34A","#CDDC39","#FFEB3B", "#FFC107","#FF9800","#FF5722","#795548","#607D8B","#F44336", "#E91E63", "#9C27B0", "#673AB7", "#3F51B5", "#2196F3", "#03A9F4", "#00BCD4", "#0f0352"],
+            backgroundColor:["#03A9F4","#3F51B5", "#9C27B0","#4CAF50","#CDDC39", "#FFEB3B", "#FFC107", "#F44336","#8BC34A","#CDDC39","#FFEB3B", "#FFC107","#FF9800","#FF5722","#795548","#607D8B","#F44336", "#E91E63", "#9C27B0", "#673AB7", "#3F51B5", "#2196F3", "#03A9F4", "#00BCD4", "#0f0352"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
