--- a/bar3/index.html
+++ b/bar3/index.html
@@ -37,13 +37,20 @@ var myChart = new Chart(ctx, {
 
     },
     options: {
+      scales:{
+          xAxes: [{
+            display: false
+        }]
+      }
+        ,
       tooltips: {
           callbacks: {
             label: function(tooltipItem, data) {
-              return data.labels[tooltipItem.index] + ': $' + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US');
+              return '$' + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US');
             },
           }
       }
+
     }
 
 });
