--- a/bar3/index.html
+++ b/bar3/index.html
@@ -24,7 +24,7 @@ var ctx = document.getElementById("bar3");
 var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
-        labels: ["Dist 26  Jimmy Van Bramer","Dist 08  Melissa Mark-Viverito","Dist 38  Carlos Menchaca","Dist 19, Paul Vallone","Dist 27  I. Daneek Miller", "Dist 39  Brad Lander", "Dist 33  Stephen Levin","Dist 36  Robert Cornegy","Dist 23  Barry Grodenchik","Dist 44  David Greenfield","Dist 34  Antonio Reynoso","Dist 22  Costa Constantinides","Dist 31  Donovan Richards","Dist 40  Matthieu Eugene", "Dist 35  Laurie Cumbo","Dist 10  Ydanis Rodriguez", "Dist 11  Andy Cohen", "Dist 47  Mark Treyger",  "Dist 03  Corey Johnson", "Dist 29  Karen Koslowitz", "Dist 07  Mark Levine", "Dist 21  Julissa Ferreras-Copeland","Dist 30  Elizabeth Crowley","Dist 15  Ritchie Torres","Dist 32  Eric Ulrich", "Dist 06  Helen Rosenthal", "Dist 05  Ben Kallos", "Dist 45  Jumaane Williams"],
+        labels: ["Dist 26  Jimmy Van Bramer","Dist 08  Melissa Mark-Viverito","Dist 38  Carlos Menchaca","Dist 19 Paul Vallone","Dist 27  I. Daneek Miller", "Dist 39  Brad Lander", "Dist 33  Stephen Levin","Dist 36  Robert Cornegy","Dist 23  Barry Grodenchik","Dist 44  David Greenfield","Dist 34  Antonio Reynoso","Dist 22  Costa Constantinides","Dist 31  Donovan Richards","Dist 40  Matthieu Eugene", "Dist 35  Laurie Cumbo","Dist 10  Ydanis Rodriguez", "Dist 11  Andy Cohen", "Dist 47  Mark Treyger",  "Dist 03  Corey Johnson", "Dist 29  Karen Koslowitz", "Dist 07  Mark Levine", "Dist 21  Julissa Ferreras-Copeland","Dist 30  Elizabeth Crowley","Dist 15  Ritchie Torres","Dist 32  Eric Ulrich", "Dist 06  Helen Rosenthal", "Dist 05  Ben Kallos", "Dist 45  Jumaane Williams"],
         datasets: [{
             label: 'Participatory Budgeting Spending Per District 2016',
             backgroundColor:["#F44336", "#E91E63", "#9C27B0", "#673AB7", "#3F51B5", "#2196F3", "#03A9F4", "#00BCD4", "#0f0352", "#009688","#4CAF50","#8BC34A","#CDDC39","#FFEB3B", "#FFC107","#FF9800","#FF5722","#795548","#607D8B","#F44336", "#E91E63", "#9C27B0", "#673AB7", "#3F51B5", "#2196F3", "#03A9F4", "#00BCD4", "#0f0352"],
@@ -41,8 +41,7 @@ var myChart = new Chart(ctx, {
           xAxes: [{
             display: false
         }]
-      }
-        ,
+      },
       tooltips: {
           callbacks: {
             label: function(tooltipItem, data) {
