--- a/doughnut2/index.html
+++ b/doughnut2/index.html
@@ -23,7 +23,7 @@ var ctx = document.getElementById("doughnut2");
 var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
-        labels: ["Education","Parks & Recreation","Open Arts, Culture & Community","Transit","Housing","Public Safety","Seniors"],
+        labels: ["Education","Parks & Recreation","Arts, Culture & Community","Transit","Housing","Public Safety","Seniors"],
         datasets: [{
             label: 'Type of Projects Funded 2016',
             backgroundColor:["#03A9F4","#3F51B5", "#9C27B0","#4CAF50","#CDDC39", "#FFEB3B", "#FFC107", "#F44336","#8BC34A","#CDDC39","#FFEB3B", "#FFC107","#FF9800","#FF5722","#795548","#607D8B","#F44336", "#E91E63", "#9C27B0", "#673AB7", "#3F51B5", "#2196F3", "#03A9F4", "#00BCD4", "#0f0352"],
