added all cm names

--- a/bar3/index.html
+++ b/bar3/index.html
@@ -53,7 +53,7 @@ Chart.defaults.scale = {
 			padding: 10,
 			reverse: false,
 			display: true,
-			autoSkip: true,
+			autoSkip: false,
 			autoSkipPadding: 0,
 			labelOffset: 0,
 			callback: function(value) {
@@ -80,17 +80,6 @@ var myChart = new Chart(ctx, {
             data: [2550000,2326200,2305000,2250000,1714000,1645000,1640000,1588000,1473000,1400000,1345000,1230000,1200000,1195000,1146500,1100000,1100000,1100000,1075000,1025000,1020000,995000,986000,957000,935000,855000,850000,750000]
         }]
 
-    },
-    jamie: {
-      firstName: "jamie",
-      lastName: "burkart",
-      address: {
-        city: 'NYC',
-        state: "NY"
-      },
-      neighbors: [
-
-      ]
     },
     options: {
       scales:{
