set axis start zero

--- a/bar3/index.html
+++ b/bar3/index.html
@@ -89,6 +89,7 @@ var myChart = new Chart(ctx, {
         yAxes: [{
           display: true,
           ticks: {
+            beginAtZero: true,
             callback: function(value) {
               return '$' + value.toLocaleString('en-US');
             }
