--- a/stackedbar5/index.html
+++ b/stackedbar5/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Ethicity of New NYPD Hires 2015</title>
+        <title>NYC Budget Over Time</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
