--- a/stackedbar6/index.html
+++ b/stackedbar6/index.html
@@ -55,10 +55,10 @@ var myChart = new Chart(ctx, {
     },
     {
       label: 'Pension Contributions',
-      backgroundColor:"#546E7A",
+      backgroundColor:"#B0BEC5",
       borderColor: "#eeeeee",
       borderWidth: 0,
-      hoverBackgroundColor: "#546E7A",
+      hoverBackgroundColor: "#B0BEC5",
       hoverBorderColor: "#eeeeee",
       data: [11.50,11.63,11.19,10.90]
   },
