bar - line - bar

--- a/stackedbar6/index.html
+++ b/stackedbar6/index.html
@@ -91,10 +91,10 @@ var myChart = new Chart(ctx, {
 },
 {
   label: 'Fire Department',
-  backgroundColor:"#FFAB40",
+  backgroundColor:"#FF5252",
   borderColor: "#eeeeee",
   borderWidth: 0,
-  hoverBackgroundColor: "#FFAB40",
+  hoverBackgroundColor: "#FF5252",
   hoverBorderColor: "#eeeeee",
   data: [2.55,2.48,2.32,2.28]
 },
